--- a/src/app/components/event/event.component.html
+++ b/src/app/components/event/event.component.html
@@ -1,9 +1,8 @@
 <div *ngFor='let event of data' class="pagina">
-    <a href="/"><img src="assets/images/door.png" alt="exit"></a>
-    <h2 class="pagetitle">Final show</h2>
-    <h3 class="pagetitle">Programma</h3>
-
+    <app-header></app-header>
+    <div class="red-square">
     <img [src]="event['img']" [alt]="event['name']" id='eventImage'>
+    </div>
     <h1 class="page-title">{{event['name']}}</h1>
     <p>{{event['desc']}}</p>
 
