--- a/src/app/components/event/event.component.scss
+++ b/src/app/components/event/event.component.scss
@@ -1,8 +1,17 @@
+@import '~src/styles.scss';
+
 .pagina {
     width: 100vw;
     height: 100vh;
-    padding: 20px;
     box-sizing: border-box;
+
+    .red-square{
+        background-color: $red;
+        width: 70vw;
+        height: 25vh;
+        margin-top: 80px;
+        box-shadow: 0px 3px 6px rgba(0,0,0,0.16);
+    }
 
     .pagetitle {
         text-align: right;
@@ -23,11 +32,9 @@
     }
 
     #time {
-        font-size: 20pt;
+        font-size: 20px;
         font-weight: 700;
-        position: absolute;
-        left: 70vw;
-        top: 25vh;
+        text-align: center;
         transform: rotateZ(90deg);
     }
 
