--- a/src/app/components/faq/faq.component.scss
+++ b/src/app/components/faq/faq.component.scss
@@ -1,7 +1,8 @@
 @import '~src/styles.scss';
 
 .pagina {
-    width: 100vw;
+    width: 90%;
+    margin: auto;
     height: 100vh;
     box-sizing: border-box;
 
@@ -14,7 +15,6 @@
     }
     ol {
         background-color: $white;
-        padding: 20px 40px;
         box-sizing: border-box;
         border-radius: 5px;
         margin-top: 30px;
